# oak

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TUTORIAL.md  bide  build.sh  confusion  disable  perf  post.md  pyproject.toml  readme.md  setup.py  sleep  thrash
.github/workflows/: cmake-single-platform.yml  cmake-ubuntu.yml  cmake-windows.yml  ubuntu.yml
cpp/: CMakeLists.txt  README.md
cpp/include/: README.md
cpp/include/encode/battle/: battle.h  frame.h  key.h  policy.h
cpp/include/format/: util.h
cpp/include/format/cart/: data.h
cpp/include/format/random-battles/: convert.ts  data.h  random-set-data.h
cpp/include/libpkmn/: data.h  init.h  pkmn.h  strings.h
cpp/include/libpkmn/data/: moves.h  species.h  status.h  strings.h  types.h
cpp/include/nn/: affine.h  default-hyperparameters.h  embedding-net.h  ffn.h
cpp/include/nn/battle/: cache.h  main-net.h  network.h
cpp/include/nn/battle/quantized/: affine.h  clipped_relu.h  common.h  main-net.h  network.h  simd.h
cpp/include/nn/battle/stockfish/: network.h
cpp/include/nn/battle/stockfish2/: clipped_relu.h  simd.h
cpp/include/py/battle/: encoded-frames.h  frames.h  output.h  target.h
cpp/include/search/: durations.h  hash.h  joint.h  mcts.h  poke-engine-evaluate.h
cpp/include/search/bandit/: pexp3.h  pucb.h  ucb.h
cpp/include/search/util/: beta.h  expl.h  softmax.h
cpp/include/teams/: ou-sample-teams.h
cpp/include/train/battle/: compressed-frame.h  frame.h  target.h
cpp/include/util/: argparse.h  parse.h  policy.h  print.h  random.h  search.h  strings.h  team-building.h
cpp/src/: benchmark.cc  chall.cc  dur.cc  generate.cc  log.cc  pyoak.cc  randbat.cc  search-test.cc  search.cc  vs.cc
dev/: c  convert.py  debug  docker  f  gcc  legal-moves.ts  libpkmn  libpkmn-windows  mingw-toolchain.cmake  release  release-windows  venv
include/: README.md  readme.md
include/battle/: debug-log.h  durations.h  init.h  pkmn.h  sample-teams.h  strings.h  util.h  view.h
include/data/: layout.h  legal-moves.h  move-pools.h  moves.h  options.h  sample-teams.h  species.h  status.h  strings.h  teams.h  types.h
include/encode/: battle-frame.h  battle-key.h  battle.h  build-trajectory.h  compressed-build-trajectory.h  encoded-build-trajectory.h  encoded-frame.h  policy.h  team.h
include/encode/battle/: battle.h  frame.h  key.h  policy.h
include/format/: learnset.h  legal-moves.h  move-pool.h  move-pools.h  util.h
include/format/Cart/: data.h
include/format/OU/: data.h  legal-moves.h  move-pools.h  teams.h
include/format/ou/: data.h
include/format/random-battles/: convert.ts  data.h  randbat.h  random-set-data.h
include/libpkmn/: data.h  init.h  layout.h  move-pools.h  options.h  pkmn.h  rng.h  strings.h
include/libpkmn/data/: boosts.h  move-pools.h  moves.h  species.h  status.h  strings.h  types.h
include/nn/: affine.h  battle.h  build-network.h  cache.h  default-hyperparameters.h  embedding-cache.h  embedding-net.h  encode.h  encoding.h  net.h  network.h  params.h  subnet.h  team.h
include/nn/battle/: cache.h  main-net.h  network.h
include/nn/battle/stockfish/: affine.h  clipped_relu.h  common.h  network.h
include/nn/battle/stockfish2/: affine.h  affine_sparse.h  main-net.h  nnue_common.h
include/nn/quantized/: affine_transform.h  affine_transform_sparse_input.h  clipped_relu.h  network.h  nnue_accumulator.h  nnue_architecture.h  nnue_common.h  nnue_feature_transformer.h  nnue_misc.h  simd.h  sqr_clipped_relu.h
include/nn/quantized/layers/: affine_transform.h
include/pi/: durations.h  exp3.h  mcts.h  tree.h  ucb.h
include/search/: durations.h  exp3-policy.h  exp3.h  hash.h  joint.h  mcts.h  poke-engine-evalulate.h  tree.h  ucb-policy.h  ucb.h
include/search/bandit/: exp3-policy-2.h  exp3-policy.h  exp3.h  pexp3.h  ucb-policy.h  ucb.h  ucb1.h
include/teams/: benchmark-teams.h  ou-sample-teams.h
include/train/: battle-frame.h  build-trajectory.h  compressed-frame.h  frame.h  target.h
include/train/battle/: compressed-frame.h  frame.h  target.h
include/util/: argparse.h  battle-frame-buffer.h  debug-log.h  int.h  parse.h  policy.h  print.h  random.h  search.h  softmax.h  strings.h  team-building.h  to_char.h  util.h  vector.h
py/: battle-train.py  battle.py  build-train.py  build.py  build_trajectory.py  common_args.py  elo.py  frame.py  libtrain.py  main.py  net.py  py_oak.py  pyoak.py  read.py  rl.py  test.py  torch_oak.py  train-build-network.py  train.py  tutorial.py
pyoak/: battle.py  build.py  common_args.py  elo.py  pyproject.toml  rl.py  setup.py  torch_oak.py  torchoak.py  tutorial.py  woo.py
pyoak/src/pyoak/: __init__.py  battle.py  build.py  common_args.py  tutorial.py
src/: __init__.py  benchmark.cc  builder.cc  chall.cc  debug-log.cc  decompress.cc  dur.cc  generate.cc  log.cc  pyoak.cc  randbat.cc  rl.py  search-test.cc  test.cc  train.cc  tutorial.py  util.py  vs-and-generate.cc  vs.cc
src/oak/: __init__.py  battle.py  build.py  cli.py  common_args.py  elo.py  evo.py  lab.py  rl.py  torch.py  tutorial.py
ts/: replay.ts
