[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oak"
version = "1.1.0"
description = "Oak Python package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0,<3.0",
    "torch>=2.8.0,<3.0"
]

[project.scripts]
tutorial = "oak.tutorial:main"
battle   = "oak.battle:main"
rl       = "oak.rl:main"
build    = "oak.build:main"
elo      = "oak.elo:main"
